--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css">
     <title>COAX</title>
 </head>
 <body>
-    
+    <div class="screen_saver"></div>
+    <script src="js/index.js"></script>
 </body>
 </html>
